methods.flowerpot.FlowerCase.scala.error
Erreur de compilation :
FlowerCase:11: error: not enough arguments for method tourneDroite: (nb: Int)Unit.
Unspecified value parameter nb.
  tourneDroite()
              ^