methods.flowerpot.FlowerCase.scala.code
def growFlowers()
{
	carreFleur()
  tourneGauche(2)
  droite()
  ligneFleur3()
  tourneGauche(3)
  tourneDroite(2)
  droite()
  carreFleur()
  tourneDroite()
  
  carreFleur()
  tourneGauche(2)
  droite()
  ligneFleur3()
  tourneDroite(6)
  gauche()
}

def side()
{
  carreFleur()
  tourneGauche(2)
  droite()
  ligneFleur3()
  tourneDroite(6)
  gauche()
}

def ligneFleur3()
{
  avance(2)
  fleur(Color.orange)
  avance(3)
  fleur(Color.blue)
  avance(3)
  fleur(Color.orange)
}

def carreFleur()
{
  ligneFleur2(Color.red,Color.cyan)
  tourneDroite(4)
  gauche()
  ligneFleur2(Color.pink,Color.green)
}

def ligneFleur2(color1:Color,color2:Color)
{
  fleur(color1)
  avance(3)
  fleur(color2)
  recule(5)
}

def fleur(color:Color)
{
  ligne(color)
  tourneDroite(1)
  retourne()
	ligne(color)
  droite()
  marquer(Color.yellow,0)
}



def ligne(color:Color)
{
	marquer(color,3)
  recule()
}

def tourneDroite(nb:Int)
{
  droite()
  for (i<-1 to nb)
  	{
  		avance()
    }
}

def tourneGauche(nb:Int)
{
  gauche()
  for (i<-1 to nb)
  	{
  		avance()
    }
}


def marquer(color:Color,nb:Int)
{
  setCouleurBrosse(color)
  baisseBrosse()
  if (nb!=0)
  	{
      avance(nb-1)
    }
	leveBrosse()
}